--- a/components/main-header/main-header.module.css
+++ b/components/main-header/main-header.module.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 1rem;
+  position: relative;
 }
 
 @media (min-width: 768px) {
@@ -19,6 +20,12 @@
   gap: 1.5rem;
   /* font-family: 'Montserrat', sans-serif; */
   font-size: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  .header {
+    padding: 2rem 10%;
+  }
 }
 
 .logo {
